--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ branches:
 build: off
 
 install:
-  - java -jar ./artifacts/aqa-shop.jar &
+  - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:mysql://localhost:3306/app &
 
 build_script:
   - chmod +x gradlew
