--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,6 @@ services:
       - POSTGRES_USER=app
       - POSTGRES_PASSWORD=pass
   node-app:
-    build: ./artifacts/gate-simulator/
+    build: gate-simulator/
     ports:
       - '9999:9999'
