--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,9 +7,41 @@ branches:
 
 build: off
 
-install:
-  - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:mysql://localhost:3306/app &
+environment:
+  matrix:
+    - db: MySQL
 
-build_script:
-  - chmod +x gradlew
-  - ./gradlew test --info  -Dselenide.headless=true
+    - db: PostgreSQL
+
+for:
+  -
+    matrix:
+      only:
+        - db: MySQL
+
+    install:
+      - sudo curl -SL https://github.com/docker/compose/releases/download/v2.7.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+      - sudo chmod +x /usr/local/bin/docker-compose
+      - sudo docker-compose -f /home/appveyor/projects/diploma/docker-compose.yml up -d
+      - java -jar ./artifacts/aqa-shop.jar --spring.datasource.url=jdbc:mysql://localhost:3306/app &
+
+    build_script:
+      - chmod +x gradlew
+      - ./gradlew test --info  -Dselenide.headless=true -DdbUrl=jdbc:mysql://localhost:3306/app
+
+  -
+    matrix:
+      only:
+        - db: PostgreSQL
+
+    install:
+      - sudo curl -SL https://github.com/docker/compose/releases/download/v2.7.0/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
+      - sudo chmod +x /usr/local/bin/docker-compose
+      - sudo docker-compose -f /home/appveyor/projects/diploma/docker-compose.yml up -d
+      - java -jar ./artifacts/aqa-shop/aqa-shop.jar --spring.datasource.url=jdbc:postgresql://localhost:5432/app &
+
+
+    build_script:
+      - chmod +x gradlew
+      - ./gradlew test --info -Dselenide.headless=true -DdbUrl=jdbc:postgresql://localhost:5432/app
+      - sudo docker-compose down
