--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,6 @@ test {
     systemProperty 'datasource', System.getProperty ('datasource', 'jdbc:mysql://localhost:3306/app')
     systemProperty 'db.url', System.getProperty('db.url', 'jdbc:postgresql://localhost:5432/app')
 
-    systemProperty 'db.user', System.getProperty('db.user', 'app')
-    systemProperty 'db.password', System.getProperty('db.password', 'pass')
+    systemProperty 'db.user', System.getProperty('db.user', 'root')
+    systemProperty 'db.password', System.getProperty('db.password', 'root')
 }
